Add activation comptes functionality with agriculteurs and travailleurs